# tmux-manager

./: Cargo.toml  package-lock.json  package.json  rustfmt.toml  taplo.toml  test-array.toml  test.toml  tsconfig.json
.cargo/: config.toml
schemas/: config.schema.json  taplo.toml
src/: cli.rs  completions.rs  config.rs  index.ts  lib.rs  main.rs  matcher.rs  migrate.rs  model.rs  paths.rs  schema_gen.rs  tmux.rs
src/@types/: index.ts
src/config/: index.ts
src/tmux/: index.ts
src/utils/: index.ts
tests/: completions.rs  matcher.rs  migrate.rs  model.rs  schema.rs  tmux_integration.rs  worktrees.rs
