[package]
name = "tmux-manager"
version = "2.0.0"
edition = "2021"
description = "Fast CLI for managing tmux sessions from config"

[lib]
name = "tmux_manager"
path = "src/lib.rs"

[[bin]]
name = "tm"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
dirs = "6"
indexmap = { version = "2", features = ["serde"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
